<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="key_spacing_content" translatable="false">bssm</string>
    <string name="key_arrange_content" translatable="false">bsam</string>
    <string name="key_lang" translatable="false">aglang</string>
    <string name="key_arrange_subject" translatable="false">tbas</string>
    <string name="key_dark_theme" translatable="false">adtms</string>
    <string name="agenda_start" translatable="false">Welcome to Agenda</string>

    <string name="app_name">Agenda</string>
    <string name="delete">Delete</string>
    <string name="lang_off">The language used is Vietnamese</string>
    <string name="lang_on">The language used is English</string>
    <string name="toolbar_header">Tool Bar</string>
    <string name="new_content_item">Create new content</string>
    <string name="create_subject">New subject</string>
    <string name="input_dialog_text">Subject name</string>
    <string name="edit_content_item">Edit content</string>
    <string name="arrange_sj_title">Arrange subject by</string>
    <string name="lang_title">Lingua Franca</string>
    <string name="signature_title">User signature</string>
    <string name="system_header">System</string>
    <string name="search_hint">Type to search</string>
    <string name="title_options">Options</string>
    <string name="arrange_sj_asc">Ascending</string>
    <string name="arrange_sj_desc">Descending</string>
    <string name="arrange_sj_newest">Newest</string>
    <string name="arrange_sj_oldest">Oldest</string>
    <string name="arrange_asc">"      Arrange: Ascending"</string>
    <string name="arrange_desc">"      Arrange: Descending"</string>
    <string name="arrange_newest">"      Arrange: Newest"</string>
    <string name="arrange_oldest">"      Arrange: Oldest"</string>
    <string name="perform_del_content">Are you sure you want to delete this content?</string>
    <string name="alert_yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="alert_deleted">"Deleted : "</string>
    <string name="subject_new">Create New Subject</string>
    <string name="alert_create">Create</string>
    <string name="alert_created">"Created : "</string>
    <string name="subject_rename">Rename Subject</string>
    <string name="alert_rename">Rename</string>
    <string name="perform_del_subject">Are you sure you want to delete this subject?</string>
    <string name="alert_renamed">"Renamed : "</string>
    <string name="alert_close">Close</string>
    <string name="send_mail_title">Send mail to Agenda…</string>
    <string name="email_not_installed">No email client installed.</string>
    <string name="alert_updated">"Updated : "</string>
    <string name="not_available">Unsuitable.</string>
    <string name="space_compact">"      Spacing: Compact"</string>
    <string name="space_normal">"      Spacing: Normal"</string>
    <string name="space_extended">"      Spacing: Extended"</string>
    <string name="subject">Subject</string>
    <string name="date_created">Date created</string>
    <string name="title">Title</string>
    <string name="enter_name">Type content name</string>
    <string name="description">Description</string>
    <string name="enter_description">Type to description</string>
    <string name="no_data_available">No data yet.</string>
    <string name="view_mode">View</string>
    <string name="app">App</string>
    <string name="options">"      Options"</string>
    <string name="info">"      About"</string>
    <string name="contact">"      Contact"</string>
    <string name="index">Index</string>
    <string name="done">Done</string>
    <string name="language_change_prompt">Agenda will restart to apply the new language.</string>
    <string name="theme_change_prompt" >Agenda will restart to apply the new theme.</string>
    <string name="dark_them_off">Light theme is on</string>
    <string name="dark_them_on">Dark theme is on</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="rename_subject" >Rename subject</string>
    <string name="delete_subject" >Delete subject</string>
    <string name="item_removed">Item was removed from the list.</string>
    <string name="undo">Undo</string>
    <string name="remove_content_item">Delete this item?</string>
    <string name="reset_all_settings">Reset All</string>

</resources>
