<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:scrollbars="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/title_nc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:textColor="@color/colorOnBackground" />

        <Button
            android:id="@+id/submit_nc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="#2ECC71" />

        <Button
            android:id="@+id/cancel_nc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#F1C40F" />

        <View
            android:id="@+id/delete_gap"
            android:layout_width="1px"
            android:layout_height="10dp"
            android:layout_centerVertical="true"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            android:background="@color/colorOnPrimary"
            android:visibility="gone" />

        <Button
            android:id="@+id/delete_nc"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:minWidth="@dimen/min_button_width"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="#FF6347"
            android:visibility="gone" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/topbar_divider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorSecondary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/subject"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#707070" />


            <EditText
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:background="@color/search_selector"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textNoSuggestions"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/date_created"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#707070" />


            <EditText
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:background="@color/search_selector"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textNoSuggestions"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#707070" />

            <EditText
                android:id="@+id/text3"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:background="@color/search_selector"
                android:hint="@string/enter_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName|textNoSuggestions"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            <!---->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#707070" />

            <EditText
                android:id="@+id/text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="16dp"
                android:background="@color/search_selector"
                android:hint="@string/enter_description"
                android:importantForAutofill="no"
                android:inputType="textMultiLine|textNoSuggestions"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>